fix top cut off on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,12 @@ margin: 0 0 0;
   width:700px;
 }
 
+.ui.container{
+width: 80vw;
+height: auto;
+padding:20px;
+}
+
 .social-share{
   vertical-align: top;
   margin-right: 30px;
