--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@ body {
   padding: 0;
   font-family: 'Lato', sans-serif;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
+  
   justify-content: center;
   text-align: left;
 }
